--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Upload Website
 on:
   push:
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,21 +18,6 @@ jobs:
       - run: npm test
         env:
           CI: true
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: build-files
-          path: build/
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Download build artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: build-files
-          path: build
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
