--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "jest",
-    "build": "mkdir -p build && cp index.html hello.js build/"
+    "test": "jest"
   },
   "author": "jrw@mit.edu",
   "license": "MIT"
